# youbot_gazebo_demo

./: CMakeLists.txt  README.md  package.xml
config/: youbot_arm_gazebo.yaml
launch/: kuka_youbot_rviz.launch
urdf/: youbot.urdf.xacro
