<?xml version="1.0"?>
<package>
  <name>youbot_gazebo_demo</name>
  <version>0.0.1</version>
  <description>Launch and config files that run a kuka youbot in Gazebo. Relies on the existing youbot_description package, and the rest should be available in the repositories.</description>
  <maintainer email="mmwitick@gmail.com">Martha Witick</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- <url type="website">http://wiki.ros.org/youbot_gazebo</url> -->
  <!-- <author email="mmwitick@gmail.com">Martha Witick</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>youbot_description</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>industrial_robot_client</run_depend>

</package>